due to the workflow only executing at the root, but the frontend being a sub folder, entering a sub folder and executing cmds but artifacts seem to only want to save at the root.. .or something, the simplest method was to copy the code to the root and execute from there

--- a/.github/workflows/unsigned-apps-build.yml
+++ b/.github/workflows/unsigned-apps-build.yml
@@ -15,6 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Copy frontend contents to root
+        run: |
+          shopt -s dotglob
+          cp -r frontend/* ./
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -78,6 +83,11 @@ jobs:
       datetime_tag: ${{ needs.build-ios.outputs.datetime_tag }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: Copy frontend contents to root
+        run: |
+          shopt -s dotglob
+          cp -r frontend/* ./
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
